tests/ui/errors/snapshots/parse_error_local_struct_in_function.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:3:3]
 2 │ fn test() {
 3 │   struct Data { name: string }
   ·   ───┬──
   ·      ╰── misplaced
 4 │ }
   ╰────
  help: Move this struct definition to the top level of the file · code: [parse.syntax_error]
